--- a/ui.apps/src/main/content/jcr_root/apps/training/components/content/registration/registration.html
+++ b/ui.apps/src/main/content/jcr_root/apps/training/components/content/registration/registration.html
@@ -1,27 +1,26 @@
-<div data-sly-use.hobbies="com.training.core.models.UserHobbies">
+//<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<div class="Container" data-sly-use.hobbies="com.training.core.models.UserHobbies">
+<h3> Register Form </h3>
+    <p>Please fill up the below form:</p>
+    <hr>
+	<form style="margin: 25px 25px 25px 45px;">
+          <label for="fname"><b>*First name:</b></label>
+          <input type="text" id="firstname" name="firstname" required><br><br>
 
-	<form>
-          <label for="fname">First name:</label>
-          <input type="text" id="firstname" name="firstname"><br><br>
+          <label for="lname"><b>*Last name:</b></label>
+          <input type="text" id="lastname" name="lastname" required><br><br>
 
-          <label for="lname">Last name:</label>
-          <input type="text" id="lastname" name="lastname"><br><br>
-
-		  <label>Hobbies</label>
+		  <label><b>Select Your Hobbies</b></label><br><br>
 
           <div data-sly-list.hobbiesList="${hobbies.hobbiesList}">
-
           <input type="checkbox" name="hobbies" id=${hobbiesList} value=${hobbiesList}>
           <label for=${hobbiesList}> ${hobbiesList}</label><br>
+          </div><br><br>
 
-          </div>
+          <input type="submit" class="button button1" name="submit" id="submit" value="Submit">
 
-          <input type="submit" name="submit" id="submit" value="Submit">
-
-          <input type="button" name="getAllData" id="getAllData" value="Get All Data">
-
+          <input type="button" class="button button1" name="getAllData" id="getAllData" value="Get All Data">
     </form>
-
-               <div id="registration-data"></div>
-
+           <div id="registration-data"></div>
 </div>
