Added css and updated Js by removing unused code in country form

--- a/ui.apps/src/main/content/jcr_root/apps/training/components/content/countryname/countryname.html
+++ b/ui.apps/src/main/content/jcr_root/apps/training/components/content/countryname/countryname.html
@@ -7,11 +7,11 @@
           <label for="countryName">* Enter Country Name Initials:</label>
           <p class="error" id="msg"></p>
 
-          <input  class="txtonly" type="text" id="countryName" name="countryName" maxlength="3"><br><br>
+          <input  class="txtonly" type="text" id="countryName" name="countryName" maxlength="3"><br>
           <span id="errormsg" class="errormsg" style="color:red"></span><br>
-
           </div>
+
           <input type="button" class="button button1" name="submitCountryName" id="submitCountryName" value="Submit">
      </form>
-               <div id="country_data"></div>
+          <div id="country_data"></div>
 </div>
